trunk/Archive2/4b/78cd224f7a45d7/output
main.cpp: In function 'main':
main.cpp:7:38: error: 'PI' undeclared (first use in this function)
     double complex z = cexp(-I * 2 * PI * 1 * 0 / 10601);
                                      ^
main.cpp:7:38: note: each undeclared identifier is reported only once for each function it appears in
